Add PendingState to requests retrieved from request queue store

When Downloads Home is first launched, DownloadUIAdapter retrieves
offline page requests from the request queue store via
RequestCoordinator. PendingState, which is not saved in the store,
must be added to the request before it is shown on the UI.

Bug: 818262
Change-Id: I9237b5f6e8fada835c8b120a74c81fdb3fe4a29b
Reviewed-on: https://chromium-review.googlesource.com/946682
Commit-Queue: Candice Sy <cmsy@google.com>
Reviewed-by: Cathy Li <chili@chromium.org>
Cr-Commit-Position: refs/heads/master@{#540674}
Former-commit-id: 811bce93ea479b58b56b27a24b7bbc1b4f30a8af